[#11878] Fix Overlapping Tooltip (#13026)
* fix tooltip

* re-add removed lines

* update snap

* update snaps

* lint

* suppress warning

* lint

--- a/src/web/app/components/account-requests-table/account-request-table.component.scss
+++ b/src/web/app/components/account-requests-table/account-request-table.component.scss
@@ -2,8 +2,10 @@
   background-color: yellow;
 }
 
+/* stylelint-disable declaration-block-no-redundant-longhand-properties */
 .table-responsive {
-  overflow: -moz-scrollbars-horizontal; 
+  overflow-y: visible;
+  overflow-x: -moz-scrollbars-horizontal; 
 }
 
 .table-responsive > table > thead > tr > th {
